# musl-segfault-sample

./: Cargo.toml  README.md
migrations/2021-03-08-182717_test/: up.sql
src/: main.rs  schema.rs
