[package]
name = "test-musl-segfault"
version = "0.1.0"
authors = ["Dietrich <dietrich@teilgedanken.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
#diesel_codegen = { version = "0.16.1", features = ["sqlite"] }
diesel_migrations = "1.4"
#libsqlite3-sys = { version = "*", features = ["bundled"] }